@@ -1,100 +1,253 @@
-apply plugin: "java"
+import arc.files.Fi
+import groovy.json.JsonSlurper
 
-version '1.0'
+def modJson = new File(rootDir, 'mod.json')
+def modInfo = new JsonSlurper().parseText(modJson.text)
 
-sourceSets.main.java.srcDirs = ["src"]
+ext {
+    javaVersion = 17
+    modName = modInfo.name
+    modDisplayName = modInfo.displayName.toString().replaceAll(/\s+/, '')
+    modVersion = modInfo.version
 
-repositories{
-    mavenCentral()
-    maven{ url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }
-    maven{ url 'https://www.jitpack.io' }
+    classPrefix = project.getProperty('classPrefix').toString().replaceAll(/\s+/, '') ?: modDisplayName
 }
 
-java{
-    targetCompatibility = 8
-    sourceCompatibility = JavaVersion.VERSION_17
+buildscript{
+    dependencies{
+        classpath "com.github.Anuken.Arc:arc-core:$arcVersion"
+        classpath "com.github.Anuken.Mindustry:core:$mindustryVersion"
+        classpath "com.squareup:javapoet:$javapoetVersion"
+        classpath "com.github.Anuken:jabel:$jabelVersion"
+    }
+
+    repositories{
+        mavenCentral()
+        maven{ url "https://maven.xpdustry.com/mindustry" }
+        maven{ url 'https://jitpack.io' }
+    }
 }
 
-ext{
-    //the build number that this mod is made for
-    mindustryVersion = 'v150'
-    jabelVersion = "93fde537c7"
-    //windows sucks
-    isWindows = System.getProperty("os.name").toLowerCase().contains("windows")
-    sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
-}
-
-//java 8 backwards compatibility flag
 allprojects{
+    apply plugin: 'java'
+    apply plugin: 'maven-publish'
+
+    version = modVersion
+
+    ext{
+        sdkRoot = System.getenv('ANDROID_HOME') ?: System.getenv('ANDROID_SDK_ROOT')
+        windows = System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')
+        taskNames = gradle.startParameter.taskNames
+
+        assetsDir = new File(project(':main').projectDir, 'assets/')
+        assetsRawDir = new File(project(':main').projectDir, 'assets-raw/')
+        spritesDir = new File(assetsDir, 'sprites/')
+        spritesRawDir = new File(assetsRawDir, 'sprites/')
+        mindustryPath = project.hasProperty('mindustryPath') ? project.property('mindustryPath') : null
+
+        // `-Ptools.recompile` will force the :main project to recompile. Default is `false`.
+        toolRecompile = project.hasProperty('tools.recompile') && Boolean.parseBoolean(project.property('tools.recompile') as String)
+    }
+
+    repositories{
+        mavenCentral()
+        maven{ url "https://maven.xpdustry.com/mindustry" }
+        maven{ url "https://jitpack.io" }
+    }
+
+    task sourcesJar(type: Jar, dependsOn: classes){
+        archiveClassifier.set 'sources'
+        from sourceSets.main.allSource
+    }
+
+    artifacts{
+        archives sourcesJar
+    }
+
+    java{
+        withJavadocJar()
+        withSourcesJar()
+    }
+
+    publishing{
+        publications{
+            maven(MavenPublication){
+                from components.java
+            }
+        }
+    }
+
     tasks.withType(JavaCompile){
-        options.compilerArgs.addAll(['--release', '8'])
+        sourceCompatibility = rootProject.ext.javaVersion
+        targetCompatibility = rootProject.ext.javaVersion
+        options.incremental = true
+        options.encoding = 'UTF-8'
+        options.compilerArgs += '-Xlint:deprecation'
+
+        def currentModName = rootProject.ext.modName
+        def currentClassPrefix = rootProject.ext.classPrefix
+
+        options.compilerArgs += [
+                "-AmodName=${currentModName}",
+                "-AclassPrefix=${currentClassPrefix}"
+        ]
+
+        options.fork = true
+        options.forkOptions.jvmArgs += [
+            '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
+        ]
     }
-}
 
-dependencies{
-    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
+    tasks.withType(Javadoc){
+        options.addStringOption('Xdoclint:none', '-quiet')
+        options.addStringOption('-release', '17')
+    }
 
-    annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
-}
-
-//force arc version
-configurations.all{
-    resolutionStrategy.eachDependency { details ->
-        if(details.requested.group == 'com.github.Anuken.Arc'){
-            details.useVersion "$mindustryVersion"
+    // Skip javadoc task for annotations project
+    project(':annotations') {
+        tasks.withType(Javadoc) {
+            enabled = false
         }
     }
 }
 
-task jarAndroid{
-    dependsOn "jar"
+tasks.register('install', DefaultTask) {
+    final def mainProj = project(':main')
+    final def deployJarProvider = mainProj.tasks.named('deploy', Jar).flatMap { it.archiveFile }
+    final def mindustryPathProp = project.providers.gradleProperty('mindustryPath')
+    final def defaultMinPath = new File(project.projectDir,"run").getAbsolutePath();
 
-    doLast{
-        if(!sdkRoot || !new File(sdkRoot).exists()) throw new GradleException("No valid Android SDK found. Ensure that ANDROID_HOME is set to your Android SDK directory.");
+    inputs.file(deployJarProvider)
+            .withPathSensitivity(PathSensitivity.ABSOLUTE)
+    inputs.property("mindustryPathPropValue", mindustryPathProp.orElse(""))
 
-        def platformRoot = new File("$sdkRoot/platforms/").listFiles().sort().reverse().find{ f -> new File(f, "android.jar").exists()}
+    dependsOn(mainProj.tasks.named('deploy'))
 
-        if(!platformRoot) throw new GradleException("No android.jar found. Ensure that you have an Android platform installed.")
+    doLast {
+        File jarFile = deployJarProvider.get().asFile
+        String customPath = mindustryPathProp.getOrNull()
 
-        //collect dependencies needed for desugaring
-        def dependencies = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(platformRoot, "android.jar")]).collect{ "--classpath $it.path" }.join(" ")
+        def mindustrySaves = customPath && !customPath.trim().isEmpty()
+                ? Fi.get(customPath)
+                : Fi.get(defaultMinPath)
+        def isSteam = mindustrySaves.child("Mindustry.exe").exists();
+        if(isSteam) mindustrySaves = mindustrySaves.child("saves")
 
-        def d8 = isWindows ? "d8.bat" : "d8"
+        def modsDir = mindustrySaves.child("mods")
+        modsDir.mkdirs()
 
-        //dex and desugar files - this requires d8 in your PATH
-        "$d8 $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar"
-                .execute(null, new File("$buildDir/libs")).waitForProcessOutput(System.out, System.err)
-    }
-}
-
-jar{
-    archiveFileName = "${base.archivesBaseName}Desktop.jar"
-
-    from{
-        configurations.runtimeClasspath.collect{ it.isDirectory() ? it : zipTree(it) }
-    }
-
-    from(projectDir){
-        include "mod.hjson"
-    }
-
-    from("assets/"){
-        include "**"
-    }
-}
-
-task deploy(type: Jar){
-    dependsOn jarAndroid
-    dependsOn jar
-    archiveFileName = "${base.archivesBaseName}.jar"
-
-    from{ [zipTree("$buildDir/libs/${project.archivesBaseName}Desktop.jar"), zipTree("$buildDir/libs/${project.archivesBaseName}Android.jar")] }
-
-    doLast{
-        delete{
-            delete "$buildDir/libs/${project.archivesBaseName}Desktop.jar"
-            delete "$buildDir/libs/${project.archivesBaseName}Android.jar"
+        File existingJar = modsDir.child(jarFile.name).file()
+        if (existingJar.exists()) {
+            existingJar.delete()
         }
+
+        Fi.get(jarFile as String).copyTo(modsDir)
+
+        logger.lifecycle("Сopied '${jarFile.name}' to '${modsDir.path()}'.")
+    }
+}
+
+tasks.register('installClient', DefaultTask) {
+    final def mindustryPathProp = project.providers.gradleProperty('mindustryPath')
+    final def mindustryVersionProp = project.providers.gradleProperty('mindustryVersion')
+    final def defaultMinPath = new File(project.projectDir,"run").getAbsolutePath();
+
+    doLast {
+        String customPath = mindustryPathProp.getOrNull()
+        def mindustryPath = customPath && !customPath.trim().isEmpty()
+                ? Fi.get(customPath)
+                : Fi.get(defaultMinPath)
+        def isSteam = mindustryPath.child("Mindustry.exe").exists();
+        if(isSteam) {
+            logger.lifecycle("Mindustry is installed via Steam, skipping installation.")
+            return
+        }
+
+        String clientVersion = mindustryVersionProp.get()
+        def clientFile = mindustryPath.child("client-${clientVersion}.jar")
+
+        if (clientFile.exists()) {
+            logger.lifecycle("Client is installed at '${clientFile.path()}'.")
+            return
+        }
+
+        mindustryPath.mkdirs()
+        clientFile.file().createNewFile();
+
+        String githubClientUrl = "https://github.com/Anuken/Mindustry/releases/download/${clientVersion}/Mindustry.jar"
+        URL url = new URL(githubClientUrl)
+        URLConnection connection = url.openConnection()
+        long contentLength = connection.contentLengthLong
+
+        InputStream input = connection.getInputStream()
+        FileOutputStream output = new FileOutputStream(clientFile.file())
+
+        byte[] buffer = new byte[8192]
+        long totalRead = 0
+        int bytesRead
+        int prevPercent = -1
+
+        while ((bytesRead = input.read(buffer)) != -1) {
+            output.write(buffer, 0, bytesRead)
+            totalRead += bytesRead
+
+            if (contentLength > 0) {
+                int percent = (int) ((totalRead * 100) / contentLength)
+                if (percent != prevPercent) {
+                    print "\r> Downloading Mindustry client: ${percent}%"
+                    System.out.flush()
+                    prevPercent = percent
+                }
+            }
+        }
+
+        input.close()
+        output.close()
+
+        logger.lifecycle("\nInstalled to '${clientFile.path()}'.");
+    }
+}
+
+tasks.register('runClient', DefaultTask) {
+    dependsOn 'installClient','install'
+
+    final def mindustryPathProp = project.providers.gradleProperty('mindustryPath')
+    final def mindustryVersionProp = project.providers.gradleProperty('mindustryVersion')
+    final def defaultMinPath = new File(project.projectDir,"run").absolutePath
+
+    doLast {
+        String customPath = mindustryPathProp.getOrNull()
+        def mindustryPath = customPath && !customPath.trim().isEmpty()
+                ? Fi.get(customPath)
+                : Fi.get(defaultMinPath)
+        def isSteam = mindustryPath.child("Mindustry.exe").exists()
+        def mindustrySaves = mindustryPath
+        if(isSteam) mindustrySaves = mindustrySaves.child("saves")
+
+        String clientVersion = mindustryVersionProp.get()
+        def clientFile = mindustryPath.child("client-${clientVersion}.jar")
+        if(isSteam) clientFile = mindustryPath.child("Mindustry.exe")
+
+        logger.lifecycle("> Starting Mindustry.");
+
+        if(isSteam)
+            exec {
+                environment "MINDUSTRY_DATA_DIR", mindustrySaves.absolutePath()
+                environment "DEVELOPMENT", "true"
+                commandLine clientFile.path()
+            }
+        else
+            exec {
+                environment "MINDUSTRY_DATA_DIR", mindustrySaves.absolutePath()
+                environment "DEVELOPMENT", "true"
+                commandLine 'java', '-jar', clientFile.path(), "-debug"
+            }
     }
 }
